@@ -1,3 +1,11 @@
+2018-11-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* gfortran.dg/pad_source_1.f: New test.
+	* gfortran.dg/pad_source_2.f: New test.
+	* gfortran.dg/pad_source_3.f: New test.
+	* gfortran.dg/pad_source_4.f: New test.
+	* gfortran.dg/pad_source_5.f: New test.
+
 2018-11-21  Jakub Jelinek  <jakub@redhat.com>
 	    Mark Eggleston  <mark.eggleston@codethink.com>
 
